[package]
name = "scad_lang"
version = "0.1.0"
edition = "2021"

[lib]
name = "scad_frontend"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[[bin]]
name = "frontend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pest = "2.7.5"
pest_derive = "2.7.5"
